index, park, attraction e parking lot frontend

--- a/WaltDisneyManagement/src/main/resources/templates/parking-lot.html
+++ b/WaltDisneyManagement/src/main/resources/templates/parking-lot.html
@@ -513,10 +513,11 @@
 
     <!-- ======= Page Title =======  -->
     <div class="pagetitle">
-      <h1> Walt Disney World</h1>
+      <h1>Parking Lot 2</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active">Home</li>
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active">Parking Lot 2</li>
         </ol>
       </nav>
     </div>
@@ -529,121 +530,66 @@
         <div class="col-lg-8">
           <div class="row">
 
-            <!-- Magic Kingdom Park Card -->
+            <!-- Customers Card -->
             <div class="col-xxl-4 col-xl-12">
-              <a href="park.html">
-                <div class="card info-card customers-card" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-                  <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Magic Kingdom Park</h5>
+              <div class="card info-card">
+                <div class="card-body">
+                  <h5 class="card-title">Status</h5>
+  
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="bi bi-info-circle"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6>Open</h6>
+                    </div>
                   </div>
                 </div>
-              </a>
-            </div><!-- End Customers Card -->
-
-            <!-- Epcot Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/epcot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">EPCOT Park</h5>
-                </div>
               </div>
-
             </div>
             <!-- End Customers Card -->
 
-            <!-- Disney's Hollywood Studios Park Card -->
+            <!-- Customers Card -->
             <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/hollywood.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
+              <div class="card info-card">
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Hollywood Studios Park</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Animal Kingdom Theme Park -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/animalKingdom.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Animal Kingdom Theme Park</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney Springs Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/springs.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney Springs Park</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Typhoon Lagoon Water Park  Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/lagoon.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Typhoon Lagoon Water Park </h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Blizzard Beach Water Park Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/blizzard.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Blizzard Beach Water Park</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Parque Estacionamento 1 Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/parque1.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Parking Cars 1</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Parque Estacionamento 2 Card -->
-            <div class="col-xxl-4 col-xl-12">
-              <a href="parking-lot.html">
-                <div class="card info-card customers-card"  style="background-image: url('/img/parque2.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                  <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Parking Cars 2</h5>
+                  <h5 class="card-title">Schedule</h5>
+  
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="bi bi-alarm"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6>8h - 18h</h6>  
+                    </div>
                   </div>
+  
                 </div>
-              </a>
+              </div>
             </div>
             <!-- End Customers Card -->
-            
+
+            <!-- Customers Card -->
+            <div class="col-xxl-4 col-xl-12">
+              <div class="card info-card">
+  
+                <div class="card-body">
+                  <h5 class="card-title">Maximum Capacity</h5>
+  
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="bi bi-car-front"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6>5 000 000</h6>  
+                    </div>
+                  </div>
+  
+                </div>
+              </div>
+            </div>
+            <!-- End Customers Card -->
+
             <!-- Line Chart -->
             <div class="col-12">
               <div class="card">
@@ -711,37 +657,38 @@
         <div class="col-lg-4">
 
           <!-- Customers Card -->
-          <div class="card info-card">
 
-            <div class="filter">
-              <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                <li class="dropdown-header text-start">
-                  <h6>Filter</h6>
-                </li>
+            <div class="card info-card">
 
-                <li><a class="dropdown-item" href="#">Today</a></li>
-                <li><a class="dropdown-item" href="#">This Month</a></li>
-                <li><a class="dropdown-item" href="#">This Year</a></li>
-              </ul>
-            </div>
+              <div class="filter">
+                <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                  <li class="dropdown-header text-start">
+                    <h6>Filter</h6>
+                  </li>
 
-            <div class="card-body">
-              <h5 class="card-title">Visitors Expected<span> | Today</span></h5>
-
-              <div class="d-flex align-items-center">
-                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                  <i class="bi bi-people"></i>
-                </div>
-                <div class="ps-3">
-                  <h6>1 244 000</h6>
-                  <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
-
-                </div>
+                  <li><a class="dropdown-item" href="#">Today</a></li>
+                  <li><a class="dropdown-item" href="#">This Month</a></li>
+                  <li><a class="dropdown-item" href="#">This Year</a></li>
+                </ul>
               </div>
 
+              <div class="card-body">
+                <h5 class="card-title">Visitors Expected <span>| Today</span></h5>
+
+                <div class="d-flex align-items-center">
+                  <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                    <i class="bi bi-people"></i>
+                  </div>
+                  <div class="ps-3">
+                    <h6>2 000 000</h6>
+                    <span class="text-success small pt-1 fw-bold">20%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+
+                  </div>
+                </div>
+
+              </div>
             </div>
-          </div>
           <!-- End Customers Card -->
 
           <!-- Recent Activity -->
@@ -817,45 +764,6 @@
             </div>
           </div>
           <!-- End Recent Activity -->
-
-          <!-- Pie Chart -->
-          <div class="card">
-            <div class="card-body">
-
-              <div class="filter">
-                <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                  <li class="dropdown-header text-start">
-                    <h6>Filter</h6>
-                  </li>
-
-                  <li><a class="dropdown-item" href="#">Today</a></li>
-                  <li><a class="dropdown-item" href="#">This Month</a></li>
-                  <li><a class="dropdown-item" href="#">This Year</a></li>
-                </ul>
-              </div>
-              <h5 class="card-title">Visitor Flow in Each Park <span>| Today</span></h5>
-
-              <div id="pieChart"></div>
-
-              <script>
-                document.addEventListener("DOMContentLoaded", () => {
-                  new ApexCharts(document.querySelector("#pieChart"), {
-                    series: [10, 15, 20, 10, 15, 10, 20],
-                    chart: {
-                      height: 350,
-                      type: 'pie',
-                      toolbar: {
-                        show: true
-                      }
-                    },
-                    labels: ['Magic Kingdom', 'EPCOT', 'Hollywood Studios', 'Animal Kingdom', 'Springs', 'Typhoon Lagoon', 'Blizzard Beach']
-                  }).render();
-                });
-              </script>
-            </div>
-          </div>
-          <!-- End Pie Chart -->
 
         </div>
         <!-- End Right side columns -->
