--- a/WaltDisneyManagement/src/main/resources/templates/park.html
+++ b/WaltDisneyManagement/src/main/resources/templates/park.html
@@ -513,10 +513,11 @@
 
     <!-- ======= Page Title =======  -->
     <div class="pagetitle">
-      <h1> Walt Disney World</h1>
+      <h1> Magic Kingdom</h1>
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item active">Home</li>
+          <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+          <li class="breadcrumb-item active">Magic Kingdom</li>
         </ol>
       </nav>
     </div>
@@ -531,10 +532,10 @@
 
             <!-- Magic Kingdom Park Card -->
             <div class="col-xxl-4 col-xl-12">
-              <a href="park.html">
+              <a href="attraction.html">
                 <div class="card info-card customers-card" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Magic Kingdom Park</h5>
+                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Walt Disney World Railroad</h5>
                   </div>
                 </div>
               </a>
@@ -546,7 +547,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/epcot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">EPCOT Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Pirates of the Caribbean</h5>
                 </div>
               </div>
 
@@ -559,7 +560,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/hollywood.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Hollywood Studios Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Haunted Mansion</h5>
                 </div>
               </div>
 
@@ -572,7 +573,7 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/animalKingdom.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Animal Kingdom Theme Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Seven Dwarfs Mine Train</h5>
                 </div>
               </div>
 
@@ -585,65 +586,13 @@
               <div class="card info-card customers-card"  style="background-image: url('/img/springs.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney Springs Park</h5>
+                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Tommorrowland Speedway</h5>
                 </div>
               </div>
 
             </div>
             <!-- End Customers Card -->
 
-            <!-- Disney's Typhoon Lagoon Water Park  Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/lagoon.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Typhoon Lagoon Water Park </h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Disney's Blizzard Beach Water Park Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/blizzard.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Disney's Blizzard Beach Water Park</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Parque Estacionamento 1 Card -->
-            <div class="col-xxl-4 col-xl-12">
-
-              <div class="card info-card customers-card"  style="background-image: url('/img/parque1.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                <div class="card-body">
-                  <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Parking Cars 1</h5>
-                </div>
-              </div>
-
-            </div>
-            <!-- End Customers Card -->
-
-            <!-- Parque Estacionamento 2 Card -->
-            <div class="col-xxl-4 col-xl-12">
-              <a href="parking-lot.html">
-                <div class="card info-card customers-card"  style="background-image: url('/img/parque2.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
-
-                  <div class="card-body">
-                    <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Parking Cars 2</h5>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- End Customers Card -->
-            
             <!-- Line Chart -->
             <div class="col-12">
               <div class="card">
@@ -703,6 +652,23 @@
             </div>
             <!-- End Line Chart -->
 
+            <!-- Reports -->
+            <div class="col-12">
+
+              <div class="card">
+
+                <div class="card-body">
+                  <h5 class="card-title">Magic Kingdom Map</h5>
+
+                  <div class="d-flex align-items-center">
+                    <img src="assets/img/magic-kingdom-map.png" alt="Magic Kingdom" width="100%"> 
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <!-- End Reports -->
+
           </div>
         </div>
         <!-- End Left side columns -->
@@ -710,39 +676,40 @@
         <!-- Right side columns -->
         <div class="col-lg-4">
 
-          <!-- Customers Card -->
-          <div class="card info-card">
+            <!-- Customers Card -->
 
-            <div class="filter">
-              <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-              <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                <li class="dropdown-header text-start">
-                  <h6>Filter</h6>
-                </li>
+              <div class="card info-card">
 
-                <li><a class="dropdown-item" href="#">Today</a></li>
-                <li><a class="dropdown-item" href="#">This Month</a></li>
-                <li><a class="dropdown-item" href="#">This Year</a></li>
-              </ul>
-            </div>
+                <div class="filter">
+                  <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                  <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                    <li class="dropdown-header text-start">
+                      <h6>Filter</h6>
+                    </li>
 
-            <div class="card-body">
-              <h5 class="card-title">Visitors Expected<span> | Today</span></h5>
-
-              <div class="d-flex align-items-center">
-                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                  <i class="bi bi-people"></i>
+                    <li><a class="dropdown-item" href="#">Today</a></li>
+                    <li><a class="dropdown-item" href="#">This Month</a></li>
+                    <li><a class="dropdown-item" href="#">This Year</a></li>
+                  </ul>
                 </div>
-                <div class="ps-3">
-                  <h6>1 244 000</h6>
-                  <span class="text-danger small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">decrease</span>
+
+                <div class="card-body">
+                  <h5 class="card-title">Visitors Expected <span>| Today</span></h5>
+
+                  <div class="d-flex align-items-center">
+                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                      <i class="bi bi-people"></i>
+                    </div>
+                    <div class="ps-3">
+                      <h6>624 000</h6>
+                      <span class="text-success small pt-1 fw-bold">6%</span> <span class="text-muted small pt-2 ps-1">increase</span>
+
+                    </div>
+                  </div>
 
                 </div>
               </div>
-
-            </div>
-          </div>
-          <!-- End Customers Card -->
+            <!-- End Customers Card -->
 
           <!-- Recent Activity -->
           <div class="card">
@@ -834,14 +801,14 @@
                   <li><a class="dropdown-item" href="#">This Year</a></li>
                 </ul>
               </div>
-              <h5 class="card-title">Visitor Flow in Each Park <span>| Today</span></h5>
+              <h5 class="card-title">Visitor Flow in Each Attraction <span>| Today</span></h5>
 
               <div id="pieChart"></div>
 
               <script>
                 document.addEventListener("DOMContentLoaded", () => {
                   new ApexCharts(document.querySelector("#pieChart"), {
-                    series: [10, 15, 20, 10, 15, 10, 20],
+                    series: [20, 25, 30, 10, 15],
                     chart: {
                       height: 350,
                       type: 'pie',
@@ -849,7 +816,7 @@
                         show: true
                       }
                     },
-                    labels: ['Magic Kingdom', 'EPCOT', 'Hollywood Studios', 'Animal Kingdom', 'Springs', 'Typhoon Lagoon', 'Blizzard Beach']
+                    labels: ['Walt Disney World Railroad', 'Pirates of the Caribbean', 'Haunted Mansion', 'Seven Dwarfs Mine Train', 'Tommorrowland Speedway']
                   }).render();
                 });
               </script>
