new message object and new websocket topic

--- a/WaltDisneyManagement/src/main/resources/templates/teste.html
+++ b/WaltDisneyManagement/src/main/resources/templates/teste.html
@@ -11,6 +11,11 @@
     <script src="/js/websocket-client.js"></script>
 </head>
 <body>
-<h1>JSON Recebido: <span id="jsonRecebido"></span></h1>
+<h1>Info magickingdom</h1>
+
+<h1>Mensagem completa: <span id="jsonRecebido"></span></h1>
+
+<h1>RailRoad velocity: <span id="railRoadVel"></span></h1>
+
 </body>
 </html>
