--- a/WaltDisneyManagement/src/main/resources/templates/attraction.html
+++ b/WaltDisneyManagement/src/main/resources/templates/attraction.html
@@ -30,6 +30,13 @@
   <!-- Template Main CSS File -->
   <link href="/css/style.css" rel="stylesheet">
 
+  <!-- Dados dinâmicos -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="/webjars/stomp-websocket/2.3.3/stomp.min.js"></script>
+  <script src="/webjars/sockjs-client/1.5.1/sockjs.min.js"></script>
+
+  <script src="/js/websocket-client.js"></script>
+
   <!-- =======================================================
   * Template Name: NiceAdmin
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
@@ -651,6 +658,21 @@
               </div>
             </div>
             <!-- End Line Chart -->
+
+            <div class="col-lg-12">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Bar Chart</h5>
+
+                  <!-- Bar Chart -->
+                  <div id="barChart"></div>
+
+
+                  <!-- End Bar Chart -->
+
+                </div>
+              </div>
+            </div>
 
             <!-- Reports -->
             <div class="col-12">
