--- a/WaltDisneyManagement/src/main/resources/templates/login.html
+++ b/WaltDisneyManagement/src/main/resources/templates/login.html
@@ -48,7 +48,7 @@
                 if (response.status == 200) {
                     // Login efetuado com sucesso
                     // Redirecionar para a página principal
-                    window.location.href = "/login";
+                    window.location.href = "/index";
                 } else {
                     // Login falhou
                     // Exibir mensagem de erro
