--- a/WaltDisneyManagement/src/main/resources/templates/attraction.html
+++ b/WaltDisneyManagement/src/main/resources/templates/attraction.html
@@ -549,8 +549,8 @@
                       <i class="bi bi-info-circle"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>Closed</h6>
-                      <span class="text-danger small pt-1 fw-bold">Needs maintenance</span>
+                      <h6>Open</h6>
+                      <!-- <span class="text-danger small pt-1 fw-bold">Needs maintenance</span> -->
   
                     </div>
                   </div>
@@ -591,7 +591,7 @@
                       <i class="bi bi-hourglass-split"></i>
                     </div>
                     <div class="ps-3">
-                      <h6>10 minutes</h6>  
+                      <h6 id="duration"></h6>  
                     </div>
                   </div>
   
