--- a/WaltDisneyManagement/src/main/resources/templates/pages-login.html
+++ b/WaltDisneyManagement/src/main/resources/templates/pages-login.html
@@ -49,8 +49,8 @@
           <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
             <div class="d-flex justify-content-center py-4">
-                <img src="/img/logo.png" alt="">
-                <span class="d-none d-lg-block">NiceAdmin</span>
+                <img src="" alt="">
+                <span class="d-none d-lg-block">Walt Disney Management</span>
             </div><!-- End Logo -->
 
             <div class="card mb-3">
