--- a/WaltDisneyManagement/src/main/resources/templates/park.html
+++ b/WaltDisneyManagement/src/main/resources/templates/park.html
@@ -530,10 +530,10 @@
         <div class="col-lg-8">
           <div class="row">
 
-            <!-- Magic Kingdom Park Card -->
+            <!-- railroad -->
             <div class="col-xxl-4 col-xl-12">
               <a th:href="@{/parks/{parkName}/attractions/{attractionName}(parkName=${'Magic Kingdom Park'}, attractionName=${'Walt Disney World Railroad'})}">
-                <div class="card info-card customers-card" style="background-image: url('/img/magicKingdomPark.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+                <div class="card info-card customers-card" style="background-image: url('/img/WaltDisneyRailroad.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
                   <div class="card-body">
                     <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Walt Disney World Railroad</h5>
                   </div>
@@ -541,10 +541,10 @@
               </a>
             </div><!-- End Customers Card -->
 
-            <!-- Epcot Card -->
+            <!-- pirates -->
             <div class="col-xxl-4 col-xl-12">
 
-              <div class="card info-card customers-card"  style="background-image: url('/img/epcot.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+              <div class="card info-card customers-card"  style="background-image: url('/img/PiratesoftheCaribbean.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
                   <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Pirates of the Caribbean</h5>
@@ -554,10 +554,10 @@
             </div>
             <!-- End Customers Card -->
 
-            <!-- Disney's Hollywood Studios Park Card -->
+            <!-- Haunted Mansion -->
             <div class="col-xxl-4 col-xl-12">
 
-              <div class="card info-card customers-card"  style="background-image: url('/img/hollywood.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+              <div class="card info-card customers-card"  style="background-image: url('/img/hauntedmansion.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
                   <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Haunted Mansion</h5>
@@ -567,10 +567,10 @@
             </div>
             <!-- End Customers Card -->
 
-            <!-- Disney's Animal Kingdom Theme Park -->
+            <!-- Seven dwarfs -->
             <div class="col-xxl-4 col-xl-12">
 
-              <div class="card info-card customers-card"  style="background-image: url('/img/animalKingdom.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+              <div class="card info-card customers-card"  style="background-image: url('/img/seven-dwarfs-mine-train-magic-kingdom-1.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
                   <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Seven Dwarfs Mine Train</h5>
@@ -580,10 +580,10 @@
             </div>
             <!-- End Customers Card -->
 
-            <!-- Disney Springs Card -->
+            <!-- Tomorrow land speedway -->
             <div class="col-xxl-4 col-xl-12">
 
-              <div class="card info-card customers-card"  style="background-image: url('/img/springs.jpg'); background-size: cover; background-position: center; width:315px;height:155px;">
+              <div class="card info-card customers-card"  style="background-image: url('/img/tomorrowland.jpeg'); background-size: cover; background-position: center; width:315px;height:155px;">
 
                 <div class="card-body">
                   <h5 class="card-title" style="color: white; font-size: 20px; font-weight: bold; text-shadow: 2px 2px #8a898f;">Tommorrowland Speedway</h5>
