--- a/WaltDisneyManagement/src/main/resources/templates/login.html
+++ b/WaltDisneyManagement/src/main/resources/templates/login.html
@@ -36,8 +36,8 @@
                     <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
                         <div class="d-flex justify-content-center py-4">
                             <a href="index.html" class="logo d-flex align-items-center w-auto">
-                                <img src="/img/logo.png" alt="">
-                                <span class="d-none d-lg-block">NiceAdmin</span>
+                                <img src="" alt="">
+                                <span class="d-none d-lg-block">Walt Disney Management</span>
                             </a>
                         </div><!-- End Logo -->
 
@@ -46,7 +46,7 @@
                             <div class="card-body">
 
                                 <div class="pt-4 pb-2">
-                                    <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
+                                    <h5 class="card-title text-center pb-0 fs-4">Login</h5>
                                 </div>
 
                                 <!-- Formulário de Login -->
