spring depends_on db, insert first data

--- a/WaltDisneyManagement/src/main/resources/templates/attraction.html
+++ b/WaltDisneyManagement/src/main/resources/templates/attraction.html
@@ -617,7 +617,7 @@
                   </ul>
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Velocity </h5>
+                  <h5 class="card-title">Velocity <span>| Km/h</span> </h5>
 
                   <div id="lineChart"></div>
 
